--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             1. Teknik Sipil   
         </h2>
         <p>
-            <img src="sipil.png" style="border-radius: 50%;" class="border">
+            <img src="sipil.png" style="border-radius: 50%;" class="border"  width="300px">
             <div>
             Apa itu teknik sipil? Teknik sipil adalah bidang ilmu yang mempelajari perencanaan/perancangan, manufaktur, manajemen/pengelolaan, <br>
             dan konservasi dari beragam fasilitas dan sistem untuk mendukung sebuah kota, pedesaan, dan perkotaan.
@@ -69,7 +69,7 @@
 <div id="Bottom" class="w3-container kota w3-animate-bottom" style="display:none" >
 <h2>2. Teknik Informatika</h2>
     <p>
-        <img src="Informatic.jpg" width="700px" style="border-radius: 50% ;" class="border" >
+        <img src="Informatic.jpg"  style="border-radius: 50% ;" class="border" width="300px">
         <div>
             Teknik Informatika merupakan bidang ilmu yang mempelajari bagaimana menggunakan teknologi komputer secara optimal guna menangani masalah transformasi atau pengolahan data dengan proses logika.<br>
             Di Jurusan Teknik Informatika kamu akan mempelajari berbagai prinsip terkait ilmu komputer mulai dari proses perancangan, pengembangan, pengujian, hingga evaluasi sistem operasi perangkat lunak.<br>
@@ -78,16 +78,14 @@
    </p>
 </div>
 
-<div id="Left" class="w3-container kota w3-animate-left" style="display: none;" >
+<div id="Left" class="w3-container kota w3-animate-left" style="display: none; " >
 <h2>3. Teknik Elektro</h2>
     <p>
-        <img src="electronic.jpg" width="300px" style="border-radius: 50% ;" class="border" >
+        <img src="electro.jpg"  style="border-radius: 50% ;" class="border" width="300px" >
         <div>
             Teknik Elektro merupakan bidang ilmu yang mempelajari listrik dan aplikasinya dalam kehidupan sehari-hari. <br>
             dengan ilmu dan pengetahuan seputar konsep, perancangan, pengembangan, serta produksi perangkat listrik dan elektronik. <br>
-            Kamu juga akan banyak membahas metode pembangkit dengan sumber energi baru, metode penyimpanan energi, dan metode kontrol penghematan energi.
-
-
+            Kamu juga akan banyak membahas metode pembangkit dengan sumber energi baru, metode penyimpanan energi, dan metode kontrol penghematan energi.            
         </div>
     </p>
 </div>
@@ -95,7 +93,7 @@
 <div id="Right" class="w3-container kota w3-animate-right" style="display:none">
 <h2>4. Teknik Mesin</h2>
     <p>
-        <img src="machine.jpg" width="600px" style="border-radius: 50% ;" class="border" >
+        <img src="machine.jpg"  style="border-radius: 50% ;" class="border"  width="300px">
         <div>
             Jurusan Teknik Mesin tidak melulu soal mesin motor, mobil, dan kegiatan perbengkelan lainnya. <br>
             Tapi kamu juga akan belajar hal-hal terkait konversi energi, konstruksi dan perancangan, teknik produksi, juga material. <br>
@@ -106,10 +104,10 @@
 </div>
 
 
-<div id="Ea" class="w3-container kota w3-animate-right" style="display:none">
+<div id="Ea" class="w3-container kota w3-animate-right" style="display: none;">
     <h2>5. Arsitektur</h2>
         <p>
-            <img src="architecture.jpg" width="600px" style="border-radius: 50% ;" class="border" >
+            <img src="architecture.jpg"  style="border-radius: 50% ;" class="border" width="300px" >
             <div>
                 Arsitektur sendiri merupakan cabang ilmu teknik dan seni dalam merancang bangunan dan struktur. <br> 
                 Mempelajari arsitektur sama seperti belajar menciptakan sebuah ruang yang memiliki karakteristik tertentu seperti kegunaan, <br> 
@@ -163,9 +161,10 @@
         font-size: 20px;
         margin: auto;
     }
+    
 </style>
 
-<div id="Feedback" class="w3-container kota w3-animate-right" style="display:none">
+<div id="Feedback" class="w3-container kota w3-animate-right" style="display:none; padding: 20px;">
     <form>
     <b>Nama : <input type="text" name="masuk"><br>
     <b>Email : <input type="text" name="masuk"><br>
@@ -189,7 +188,7 @@
 <script>
     feather.replace()
 </script>
-    </body>
+</body>
 <style>
     .footer {
         position:fixed;
@@ -201,6 +200,11 @@
     }
 </style>
 
+<div class="footer" align="center" >
+    <p class="footer-text-left">
+            AFIE|NIM:10122071|Universitas : UNIKOM
+    </p>
+</div>
 
 
 </html>
